[gd_scene load_steps=9 format=2]

[ext_resource path="res://SoapDispenser.gd" type="Script" id=1]
[ext_resource path="res://sprites/soap_dispenser_2.png" type="Texture" id=2]
[ext_resource path="res://sprites/hand_push.png" type="Texture" id=3]
[ext_resource path="res://sprites/soap_dispenser_1.png" type="Texture" id=4]
[ext_resource path="res://sprites/hand_catch_1.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23.4226, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 39.6464, 15.4087 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 69.1727, 34.5479 )

[node name="SoapDispenser" type="Node2D"]
position = Vector2( 240, 450 )
script = ExtResource( 1 )

[node name="SoapDp1" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="SoapDp2" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 6 )
texture = ExtResource( 2 )

[node name="PressHere" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PressHere"]
position = Vector2( -20, -89 )
shape = SubResource( 1 )

[node name="PressHand" type="Area2D" parent="." groups=[
"hands",
]]

[node name="Sprite" type="Sprite" parent="PressHand"]
position = Vector2( -125, -140 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PressHand"]
position = Vector2( -33, -140 )
shape = SubResource( 2 )

[node name="SoapHand" type="Area2D" parent="."]
position = Vector2( 300, 53 )
__meta__ = {
"_edit_group_": true
}

[node name="Step1" type="Node2D" parent="SoapHand"]

[node name="Sprite" type="Sprite" parent="SoapHand/Step1" groups=[
"hands",
]]
texture = ExtResource( 5 )

[node name="Step2" type="Node2D" parent="SoapHand"]

[node name="Step3" type="Node2D" parent="SoapHand"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoapHand"]
position = Vector2( -73, 0 )
shape = SubResource( 3 )

[node name="SoapSpawn" type="Position2D" parent="."]
position = Vector2( 72.8642, -21.6759 )
[connection signal="area_entered" from="PressHere" to="." method="_on_PressHere_area_entered"]
[connection signal="area_exited" from="PressHere" to="." method="_on_PressHere_area_exited"]
[connection signal="body_entered" from="SoapHand" to="." method="_on_SoapHand_body_entered"]
